# tree-sitter-conao3-bash

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-conao3_bash.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_conao3_bash/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterConao3Bash/: conao3_bash.h
bindings/swift/TreeSitterConao3BashTests/: TreeSitterConao3BashTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
